fixed margins/sizings/spacings

--- a/src/CountdownTimer.css
+++ b/src/CountdownTimer.css
@@ -1,7 +1,7 @@
 #timer
 {
-
     padding-bottom: 15px;
+    margin-bottom: 2%;
 }
 .show-counter
 {
