--- a/src/Homepage.css
+++ b/src/Homepage.css
@@ -1,4 +1,4 @@
 #homepage
 {
-    margin-left: 2%;
+    margin: 1%;
 }
