--- a/src/SponsorshipPitch2026.css
+++ b/src/SponsorshipPitch2026.css
@@ -1,13 +1,14 @@
 #sponsorshipPitch
 {
-    display:flex;
-    margin-top: 2%;
+    display: flex;
+    margin-top: 5%;
     margin-bottom: 2%;
+    align-items: center;
 }
 
 #sponsorText
 {
-    flex: 50%;
+    flex: 60%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -19,7 +20,6 @@
     display: flex;
     flex: 50%;
     justify-content: flex-start;
-    align-items: center;
 }
 
 #sponsorHeader
