--- a/src/lastyear2026.css
+++ b/src/lastyear2026.css
@@ -25,7 +25,7 @@ font-weight: 500;
 font-size: 20px;
 /* identical to box height, or 29px */
 letter-spacing: -0.005em;
-margin-top: 1vh;
+margin-top: 2vh;
 color: rgba(0, 0, 0, 0.55);
 
 }
@@ -38,7 +38,8 @@ color: rgba(0, 0, 0, 0.55);
 display: flex;
 flex-direction: column;
 align-items: flex-start;
-margin-left: 3%;
+margin-top: -20px;
+margin-left: 150px;
 justify-content: center;
 height: auto;
 }
